[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "pi-invaders"
version = "0.1.0"
dependencies = [
    "mpmath",
    "pygame",
    "pygame-menu"
]


[tool.hatch.build.targets.wheel]
packages = ["pi_invaders"]


[tool.hatch.build.targets.wheel.force-include]
"pi_invaders/game_settings/images" = "pi_invaders/game_settings/images"
